Optimized the background and fixed slow background loading

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AIBY-test</title>
 
     <link rel="stylesheet" href="css/main/main.css">
     <link rel="stylesheet" href="css/background/background.css">
@@ -33,7 +33,7 @@
                      <span class="offer-label-item" data-i18n="Exclusive <br>Styles"></span>
                  </div>
                  <div class="offer-item">
-                     <img src="static/backgrounds/magicAvatars.svg" alt="Magic Avatars"/>
+                     <img src="static/backgrounds/magicAvatarsPNG.png" alt="Magic Avatars"/>
                      <span class="offer-label-item" data-i18n="Magic Avatars <br>With 20% Off"></span>
                  </div>
              </div>
