change style for selected option

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              </div>
 
              <div class="access-buttons-container">
-                 <input type="radio" name="choose" id="yearlyAccess">
+                 <input type="radio" name="choose" id="yearlyAccess" checked>
                  <label id="yearly-access-btn" for="yearlyAccess">
                      <img src="static/buttons/yearlyAccessInActive.svg" alt="Yearly access button">
                      <div class="yearly-btn-text-container">
@@ -57,7 +57,7 @@
                      </div>
                  </label>
 
-                 <input type="radio" name="choose" id="weeklyAccess" checked>
+                 <input type="radio" name="choose" id="weeklyAccess">
                  <label id="weekly-access-btn" for="weeklyAccess">
                      <img src="static/buttons/weeklyAccessInActive.svg" alt="Weekly access inactive">
                      <div class="weekly-btn-text-container">
